# GEN-AI

./: .gitignore  README.md  pyproject.toml  requirements.txt
_1_LangChain_Models/_1_LLMs/: Paid_llm_demo.py
_1_LangChain_Models/_2_ChatModels/: Batch.py  CallModels.py  Stream.py
_1_LangChain_Models/_2_ChatModels/OpenSource_Model/: ChatGroq.py  ChatModel_HF_API.py  LocalOpenLLM.py
_1_LangChain_Models/_2_ChatModels/Paid/: ChatAnthropic.py  ChatGemini.py  ChatOpenAI.py
_1_LangChain_Models/_3_Embedding_Models/: OpensourceModel.py
_1_LangChain_Models/_3_Embedding_Models/Mini_Project/: Embed.py
_1_Models/: project_chatbot.py
_1_Models/Free/: model_embeddings_huggingface_ai.py  model_groq_ai.py  model_huggingface_ai.py  model_local_GGUF.py  model_local_chatmodel.py  model_local_embeddings_ai.py  model_local_huggingface_ai.py
_1_Models/Paid/: model_google_gen_ai.py  model_open_ai.py
_2_LangChain_Prompts/: _1_StaticPrompts.py  _2_StaticPrompt_Website.py  _6_ChatBotWithHistory.py  _7_ChatBotWithHistory.py  _8_Dynamic_list_of_message_ChatPromptTemplate.py
_2_LangChain_Prompts/_3_DynamicPrompt/: Prompt.py  UI.py
_2_LangChain_Prompts/_4_ChatBot/: Prompt.py  UI.py
_2_LangChain_Prompts/_9_Message_placeholder/: Placeholder.py
_2_Messages/: message_intro.py
_2_Messages/Project_ChatBot/: App.py  Chatbot.py
_3_LangChain_Tools/: _1_Intro.ipynb  _2_Simple_Agent.ipynb  _3_Agent_Multiple_Tools.ipynb
_3_Prompt_template/: prompt_intro.py
_4_Structure_Outputs/: App.py  backend.py
