[project]
name = "gen-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "dotenv>=0.9.9",
    "google-search-results>=2.4.2",
    "hf-xet>=1.4.3",
    "huggingface-hub[hf-xet]>=0.36.2",
    "jinja2>=3.1.6",
    "langchain>=1.2.14",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.12",
    "langchainhub>=0.1.21",
    "numexpr>=2.14.1",
    "pydantic>=2,<3",
    "sentence-transformers>=5.3.0",
    "sentencepiece>=0.2.1",
    "streamlit>=1.56.0",
    "text-generation>=0.7.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=4.57.6",
]
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
